--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev:server": "ts-node-dev --inspect --transpileOnly --ignore node_modules src"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "uuidv4": "^6.1.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.7",
