--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,8 +1,8 @@
 {
-  "type": "protgres",
+  "type": "postgres",
   "host": "localhost",
   "port": 5432,
-  "username": "docker",
+  "username": "postgres",
   "password": "docker",
   "database": "gostack_gobarber",
   "migrations": [
