--- a/ormconfig.json
+++ b/ormconfig.json
@@ -10,8 +10,8 @@
   ],
   "migrations": [
     "./src/database/migrations/*.ts"
-  ],
+ ],
   "cli":{
-    "migrations": "./src/database/migrations"
+    "migrationsDir": "./src/database/migrations"
   }
 }
