--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js",
     "build": "tsc",
-    "start": "ts-node src/index.ts",
-    "dev:server": "ts-node-dev --inspect --transpileOnly --ignore node_modules src/index.ts"
+    "start": "ts-node src/shared/infra/http/index.ts",
+    "dev:server": "ts-node-dev --inspect --transpileOnly --ignore node_modules src/shared/infra/http/index.ts"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
