--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js",
+    "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
     "build": "tsc",
     "start": "ts-node src/shared/infra/http/index.ts",
-    "dev:server": "ts-node-dev --inspect --transpileOnly --ignore node_modules src/shared/infra/http/index.ts"
+    "dev:server": "ts-node-dev -r tsconfig-paths/register --inspect --transpileOnly --ignore node_modules src/shared/infra/http/index.ts"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -36,6 +36,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "prettier": "^2.0.5",
     "ts-node-dev": "^1.0.0-pre.50",
+    "tsconfig-paths": "^3.9.0",
     "typescript": "^3.9.6"
   }
 }
